# aes

./: .gitignore  Cargo.toml  README.md
C/aes/: Makefile  nistVectorTest.pl
C/lib/: Makefile  libaes.c  libaestest.c
Old-C/aes/: aes.c  decrypt.sh
Old-C/lib/: libaes.c  libcryptochallenge.c  libcryptochallenge.h
lib/: libaes.c
src/: argparse.rs  general.rs  kdf.rs  libaes.rs  main.rs
src/nist_tests/: mod.rs
src/nist_tests/vectors/: mod.rs
src/tests/: mod.rs  roundtrip.sh
