[package]
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
name = "aes"
description = "Advanced Encryption Standard with NIST tests\nCompatible with OpenSSL options: -aes-[128,192,256]-[ecb,cbc,ctr], -pbkdf2, -K, -iv"
readme = "README.md"
repository = "https://github.com/dfarnham/aes"
keywords = ["encryption", "aes"]
categories = ["command-line-utilities"]
license = "MIT"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[dependencies]
anyhow = "1"
argon2 = "0.5.2"
base64 = "0.21"
clap = { version = "4", features = ["cargo", "derive"] }
hex = "0.4.3"
hex-literal = "0.4.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.8"
